k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
